; ModuleID = '/home/carl/AnghaBench/streem/src/extr_random.c_exec_rand.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_random.c_exec_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rand_data = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"|s\00", align 1
@STRM_NG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"seed size differ\00", align 1
@strm_producer = common dso_local global i32 0, align 4
@gen_rand = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_rand(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.rand_data*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @strm_get_args(i32* %13, i32 %14, i32* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %11, i32* %12)
  %17 = call %struct.rand_data* @malloc(i32 4)
  store %struct.rand_data* %17, %struct.rand_data** %10, align 8
  %18 = load %struct.rand_data*, %struct.rand_data** %10, align 8
  %19 = icmp ne %struct.rand_data* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %4
  %21 = load i32, i32* @STRM_NG, align 4
  store i32 %21, i32* %5, align 4
  br label %56

22:                                               ; preds = %4
  %23 = load i32, i32* %7, align 4
  %24 = icmp eq i32 %23, 2
  br i1 %24, label %25, label %42

25:                                               ; preds = %22
  %26 = load i32, i32* %12, align 4
  %27 = sext i32 %26 to i64
  %28 = icmp ne i64 %27, 4
  br i1 %28, label %29, label %35

29:                                               ; preds = %25
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @strm_raise(i32* %30, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %32 = load %struct.rand_data*, %struct.rand_data** %10, align 8
  %33 = call i32 @free(%struct.rand_data* %32)
  %34 = load i32, i32* @STRM_NG, align 4
  store i32 %34, i32* %5, align 4
  br label %56

35:                                               ; preds = %25
  %36 = load %struct.rand_data*, %struct.rand_data** %10, align 8
  %37 = getelementptr inbounds %struct.rand_data, %struct.rand_data* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i8*, i8** %11, align 8
  %40 = load i32, i32* %12, align 4
  %41 = call i32 @memcpy(i32 %38, i8* %39, i32 %40)
  br label %47

42:                                               ; preds = %22
  %43 = load %struct.rand_data*, %struct.rand_data** %10, align 8
  %44 = getelementptr inbounds %struct.rand_data, %struct.rand_data* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @xorshift128init(i32 %45)
  br label %47

47:                                               ; preds = %42, %35
  %48 = load i32, i32* @strm_producer, align 4
  %49 = load i32, i32* @gen_rand, align 4
  %50 = load %struct.rand_data*, %struct.rand_data** %10, align 8
  %51 = bitcast %struct.rand_data* %50 to i8*
  %52 = call i32 @strm_stream_new(i32 %48, i32 %49, i32* null, i8* %51)
  %53 = call i32 @strm_stream_value(i32 %52)
  %54 = load i32*, i32** %9, align 8
  store i32 %53, i32* %54, align 4
  %55 = load i32, i32* @STRM_OK, align 4
  store i32 %55, i32* %5, align 4
  br label %56

56:                                               ; preds = %47, %29, %20
  %57 = load i32, i32* %5, align 4
  ret i32 %57
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i8**, i32*) #1

declare dso_local %struct.rand_data* @malloc(i32) #1

declare dso_local i32 @strm_raise(i32*, i8*) #1

declare dso_local i32 @free(%struct.rand_data*) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @xorshift128init(i32) #1

declare dso_local i32 @strm_stream_value(i32) #1

declare dso_local i32 @strm_stream_new(i32, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
